# RAG-Series

./: README.md
rag_series/: Dockerfile  FIXES.md  GPU_README.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
rag_series/Books/: 1.fb2  2.fb2  README.md
rag_series/benchmark/: latency.py  report.py
rag_series/benchmark/results/: report.md  report_summary.json
rag_series/eval/: questions.example.jsonl  run_eval.py
rag_series/frontend-demo/: README.md  app.js  index.html  styles.css
rag_series/rag_series/: __init__.py  api.py  chunking.py  cli.py  config.py  context.py  database.py  debug.py  env.py  exceptions.py  fb2_parser.py  indexes.py  llm.py  llm_cache.py  logging_utils.py  models.py  observability.py  pipeline.py  reranking.py  retrieval.py  schemas.py  service.py  text_store.py  text_utils.py
rag_series/tests/: conftest.py  test_api.py  test_chunking.py  test_fts_query.py  test_hf_cache_recovery.py  test_manifest.py  test_model_singleton.py  test_service_text_mapping.py  test_text_utils.py
